--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
+  "homepage": "https://github.com/eunjung0402/vuePage1",
   "name": "my-vue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -25,6 +28,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "gh-pages": "^6.1.1",
     "prettier": "^1.19.1",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
